--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
 
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
+    <h1>Welcome!</h1>
+    <p>Here are some game links Chat gpt coded,</p>
 
     <ul>
       <li><a href="pong.html">Pong</a></li>
