--- a/platformer.html
+++ b/platformer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Platformer Game</title>
+    <title>Expanded Platformer Game</title>
     <style>
         body {
             margin: 0;
@@ -11,7 +11,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #333;
+            height: 100vh;
+            background-color: #222;
         }
         canvas {
             background-color: #87CEEB;
@@ -20,17 +21,17 @@
         }
         .controls {
             position: absolute;
-            bottom: 10px;
+            bottom: 20px;
+            width: 90%;
             display: flex;
             justify-content: space-between;
-            width: 90%;
         }
         button {
             width: 80px;
             height: 80px;
-            background-color: rgba(255, 255, 255, 0.5);
+            background-color: rgba(255, 255, 255, 0.8);
             border: none;
-            font-size: 20px;
+            font-size: 24px;
             border-radius: 50%;
         }
     </style>
@@ -47,19 +48,57 @@
         const canvas = document.getElementById('game');
         const ctx = canvas.getContext('2d');
 
-        const player = { x: 50, y: 300, width: 30, height: 50, speed: 5, dy: 0, gravity: 0.5, jumpPower: -10, onGround: false };
-        const platforms = [
-            { x: 0, y: 350, width: 800, height: 50 }, // Ground
-            { x: 150, y: 280, width: 100, height: 20 }, // Platform 1
-            { x: 400, y: 250, width: 100, height: 20 }, // Platform 2
-            { x: 600, y: 200, width: 100, height: 20 }, // Platform 3
+        let level = 1;
+        let score = 0;
+        const player = {
+            x: 50, y: 300, width: 30, height: 50,
+            speed: 5, dy: 0, gravity: 0.5,
+            jumpPower: -10, onGround: false, health: 100
+        };
+
+        // Define the levels with different platform, trap, and enemy setups
+        const levels = [
+            {
+                platforms: [
+                    { x: 0, y: 350, width: 800, height: 50 }, // Ground
+                    { x: 150, y: 280, width: 120, height: 20 },
+                    { x: 400, y: 250, width: 100, height: 20 },
+                    { x: 600, y: 200, width: 100, height: 20 }
+                ],
+                traps: [
+                    { x: 250, y: 330, width: 50, height: 20, move: false }
+                ],
+                enemies: [
+                    { x: 500, y: 280, width: 30, height: 40, speed: 2, direction: 1 }
+                ],
+                goal: { x: 720, y: 300, width: 50, height: 50 }
+            },
+            {
+                platforms: [
+                    { x: 0, y: 350, width: 800, height: 50 },
+                    { x: 100, y: 280, width: 120, height: 20 },
+                    { x: 400, y: 220, width: 100, height: 20 },
+                    { x: 600, y: 150, width: 100, height: 20 }
+                ],
+                traps: [
+                    { x: 200, y: 330, width: 50, height: 20, move: true },
+                    { x: 500, y: 220, width: 50, height: 20, move: true }
+                ],
+                enemies: [
+                    { x: 500, y: 280, width: 30, height: 40, speed: 2, direction: -1 }
+                ],
+                goal: { x: 720, y: 300, width: 50, height: 50 }
+            }
         ];
-        const traps = [
-            { x: 250, y: 330, width: 50, height: 20 }, // Trap 1
-        ];
+
+        const currentLevel = levels[level - 1];
+        const platforms = currentLevel.platforms;
+        const traps = currentLevel.traps;
+        const enemies = currentLevel.enemies;
+        const goal = currentLevel.goal;
+
         let keys = { left: false, right: false, jump: false };
 
-        // Event listeners for touch controls
         document.getElementById('left').addEventListener('touchstart', () => keys.left = true);
         document.getElementById('left').addEventListener('touchend', () => keys.left = false);
         document.getElementById('right').addEventListener('touchstart', () => keys.right = true);
@@ -67,7 +106,13 @@
         document.getElementById('jump').addEventListener('touchstart', () => keys.jump = true);
         document.getElementById('jump').addEventListener('touchend', () => keys.jump = false);
 
+        // Update the game state each frame
         function update() {
+            if (player.health <= 0) {
+                alert('Game Over! You died.');
+                resetGame();
+            }
+
             // Horizontal movement
             if (keys.left) player.x -= player.speed;
             if (keys.right) player.x += player.speed;
@@ -78,7 +123,7 @@
 
             // Collision with platforms
             player.onGround = false;
-            for (const platform of platforms) {
+            platforms.forEach(platform => {
                 if (player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
                     player.y + player.height >= platform.y &&
@@ -87,18 +132,52 @@
                     player.dy = 0;
                     player.onGround = true;
                 }
-            }
+            });
 
             // Jumping
             if (keys.jump && player.onGround) {
                 player.dy = player.jumpPower;
             }
 
-            // Collision with traps
-            for (const trap of traps) {
+            // Trap movement
+            traps.forEach(trap => {
+                if (trap.move) {
+                    trap.x += trap.direction * 2;
+                    if (trap.x <= 400 || trap.x >= 600) trap.direction *= -1;
+                }
+            });
+
+            // Trap collision
+            traps.forEach(trap => {
                 if (player.x < trap.x + trap.width &&
                     player.x + player.width > trap.x &&
                     player.y + player.height > trap.y) {
+                    player.health -= 10; // Decrease health on trap collision
+                    resetGame();
+                }
+            });
+
+            // Enemy movement
+            enemies.forEach(enemy => {
+                enemy.x += enemy.speed * enemy.direction;
+                if (enemy.x <= 400 || enemy.x >= 600) enemy.direction *= -1;
+                if (player.x < enemy.x + enemy.width &&
+                    player.x + player.width > enemy.x &&
+                    player.y + player.height > enemy.y) {
+                    player.health -= 10; // Decrease health on enemy collision
+                    resetGame();
+                }
+            });
+
+            // Goal collision
+            if (player.x + player.width > goal.x && player.y + player.height > goal.y) {
+                score += 100;  // Award points
+                level++;
+                if (level > levels.length) {
+                    alert('You completed all levels! 🎉');
+                    resetGame();
+                } else {
+                    // Load the next level
                     resetGame();
                 }
             }
@@ -108,23 +187,45 @@
             if (player.x + player.width > canvas.width) player.x = canvas.width - player.width;
         }
 
+        // Reset the game for the next level or restart
         function resetGame() {
             player.x = 50;
             player.y = 300;
             player.dy = 0;
+            player.health = 100;
+            if (level > levels.length) level = 1;
         }
 
+        // Draw the game state
         function draw() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+
             // Draw platforms
             ctx.fillStyle = 'green';
             platforms.forEach(platform => ctx.fillRect(platform.x, platform.y, platform.width, platform.height));
+
             // Draw traps
             ctx.fillStyle = 'red';
             traps.forEach(trap => ctx.fillRect(trap.x, trap.y, trap.width, trap.height));
+
+            // Draw enemies
+            ctx.fillStyle = 'purple';
+            enemies.forEach(enemy => ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height));
+
+            // Draw goal
+            ctx.fillStyle = 'gold';
+            ctx.fillRect(goal.x, goal.y, goal.width, goal.height);
+
             // Draw player
             ctx.fillStyle = 'blue';
             ctx.fillRect(player.x, player.y, player.width, player.height);
+
+            // Draw score and health
+            ctx.fillStyle = 'black';
+            ctx.font = '16px Arial';
+            ctx.fillText('Score: ' + score, 10, 20);
+            ctx.fillText('Health: ' + player.health, 10, 40);
+            ctx.fillText('Level: ' + level, canvas.width - 100, 20);
         }
 
         function gameLoop() {
