--- a/platformer.html
+++ b/platformer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Expanded Platformer Game</title>
+    <title>Super Enhanced Platformer</title>
     <style>
         body {
             margin: 0;
@@ -34,6 +34,16 @@
             font-size: 24px;
             border-radius: 50%;
         }
+        .ui {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+        .ui h2 {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -43,33 +53,43 @@
         <button id="jump">⬆️</button>
         <button id="right">➡️</button>
     </div>
-
+    <div class="ui">
+        <h2>Score: <span id="score">0</span></h2>
+        <h2>Health: <span id="health">100</span></h2>
+        <h2>Level: <span id="level">1</span></h2>
+        <h2>Lives: <span id="lives">3</span></h2>
+        <h2>Time: <span id="time">00:00</span></h2>
+    </div>
+    
     <script>
         const canvas = document.getElementById('game');
         const ctx = canvas.getContext('2d');
-
         let level = 1;
         let score = 0;
-        const player = {
+        let lives = 3;
+        let timeElapsed = 0;
+        let lastTime = Date.now();
+
+        let player = {
             x: 50, y: 300, width: 30, height: 50,
             speed: 5, dy: 0, gravity: 0.5,
-            jumpPower: -10, onGround: false, health: 100
+            jumpPower: -12, onGround: false, health: 100, direction: 'right',
+            velocityX: 0, velocityY: 0, speedX: 5, speedY: 0
         };
 
-        // Define the levels with different platform, trap, and enemy setups
         const levels = [
             {
                 platforms: [
-                    { x: 0, y: 350, width: 800, height: 50 }, // Ground
+                    { x: 0, y: 350, width: 800, height: 50 },
                     { x: 150, y: 280, width: 120, height: 20 },
                     { x: 400, y: 250, width: 100, height: 20 },
                     { x: 600, y: 200, width: 100, height: 20 }
                 ],
                 traps: [
-                    { x: 250, y: 330, width: 50, height: 20, move: false }
+                    { x: 250, y: 330, width: 50, height: 20, type: 'spike' }
                 ],
                 enemies: [
-                    { x: 500, y: 280, width: 30, height: 40, speed: 2, direction: 1 }
+                    { x: 500, y: 280, width: 30, height: 40, speed: 2, direction: 1, type: 'patrol' }
                 ],
                 goal: { x: 720, y: 300, width: 50, height: 50 }
             },
@@ -81,11 +101,11 @@
                     { x: 600, y: 150, width: 100, height: 20 }
                 ],
                 traps: [
-                    { x: 200, y: 330, width: 50, height: 20, move: true },
-                    { x: 500, y: 220, width: 50, height: 20, move: true }
+                    { x: 200, y: 330, width: 50, height: 20, type: 'fire' },
+                    { x: 500, y: 220, width: 50, height: 20, type: 'spike' }
                 ],
                 enemies: [
-                    { x: 500, y: 280, width: 30, height: 40, speed: 2, direction: -1 }
+                    { x: 500, y: 280, width: 30, height: 40, speed: 2, direction: -1, type: 'chaser' }
                 ],
                 goal: { x: 720, y: 300, width: 50, height: 50 }
             }
@@ -99,6 +119,7 @@
 
         let keys = { left: false, right: false, jump: false };
 
+        // Control buttons
         document.getElementById('left').addEventListener('touchstart', () => keys.left = true);
         document.getElementById('left').addEventListener('touchend', () => keys.left = false);
         document.getElementById('right').addEventListener('touchstart', () => keys.right = true);
@@ -106,14 +127,35 @@
         document.getElementById('jump').addEventListener('touchstart', () => keys.jump = true);
         document.getElementById('jump').addEventListener('touchend', () => keys.jump = false);
 
+        // Sound effects
+        const jumpSound = new Audio('https://www.soundjay.com/button/beep-07.wav');
+        const damageSound = new Audio('https://www.soundjay.com/button/beep-03.wav');
+        const winSound = new Audio('https://www.soundjay.com/button/beep-09.wav');
+        const powerUpSound = new Audio('https://www.soundjay.com/button/coin-1.wav');
+
+        // Timer
+        function updateTimer() {
+            let now = Date.now();
+            let diff = Math.floor((now - lastTime) / 1000);
+            timeElapsed = diff;
+            let minutes = Math.floor(timeElapsed / 60);
+            let seconds = timeElapsed % 60;
+            document.getElementById('time').textContent = `${minutes < 10 ? '0' + minutes : minutes}:${seconds < 10 ? '0' + seconds : seconds}`;
+        }
+
         // Update the game state each frame
         function update() {
             if (player.health <= 0) {
-                alert('Game Over! You died.');
-                resetGame();
+                lives--;
+                if (lives > 0) {
+                    resetGame();
+                } else {
+                    alert('Game Over! You are out of lives!');
+                    resetGame(true); // Reset the game and restart
+                }
             }
 
-            // Horizontal movement
+            // Handle horizontal movement
             if (keys.left) player.x -= player.speed;
             if (keys.right) player.x += player.speed;
 
@@ -121,7 +163,7 @@
             player.dy += player.gravity;
             player.y += player.dy;
 
-            // Collision with platforms
+            // Collision detection with platforms
             player.onGround = false;
             platforms.forEach(platform => {
                 if (player.x < platform.x + platform.width &&
@@ -137,66 +179,83 @@
             // Jumping
             if (keys.jump && player.onGround) {
                 player.dy = player.jumpPower;
+                jumpSound.play();
             }
 
-            // Trap movement
-            traps.forEach(trap => {
-                if (trap.move) {
-                    trap.x += trap.direction * 2;
-                    if (trap.x <= 400 || trap.x >= 600) trap.direction *= -1;
-                }
-            });
-
-            // Trap collision
+            // Trap collisions
             traps.forEach(trap => {
                 if (player.x < trap.x + trap.width &&
                     player.x + player.width > trap.x &&
                     player.y + player.height > trap.y) {
-                    player.health -= 10; // Decrease health on trap collision
-                    resetGame();
+                    if (trap.type === 'spike') {
+                        player.health -= 10;
+                        damageSound.play();
+                    } else if (trap.type === 'fire') {
+                        player.health -= 5;
+                        damageSound.play();
+                    }
                 }
             });
 
-            // Enemy movement
+            // Enemy behavior (simple patrolling or chasing)
             enemies.forEach(enemy => {
-                enemy.x += enemy.speed * enemy.direction;
-                if (enemy.x <= 400 || enemy.x >= 600) enemy.direction *= -1;
+                if (enemy.type === 'patrol') {
+                    enemy.x += enemy.speed * enemy.direction;
+                    if (enemy.x <= 0 || enemy.x + enemy.width >= canvas.width) {
+                        enemy.direction *= -1;
+                    }
+                } else if (enemy.type === 'chaser') {
+                    if (player.x < enemy.x) {
+                        enemy.x -= enemy.speed;
+                    } else {
+                        enemy.x += enemy.speed;
+                    }
+                }
+
+                // Collision with enemies
                 if (player.x < enemy.x + enemy.width &&
                     player.x + player.width > enemy.x &&
+                    player.y < enemy.y + enemy.height &&
                     player.y + player.height > enemy.y) {
-                    player.health -= 10; // Decrease health on enemy collision
-                    resetGame();
+                    player.health -= 20;
+                    damageSound.play();
                 }
             });
 
-            // Goal collision
-            if (player.x + player.width > goal.x && player.y + player.height > goal.y) {
-                score += 100;  // Award points
+            // Goal detection (win the level)
+            if (player.x < goal.x + goal.width &&
+                player.x + player.width > goal.x &&
+                player.y < goal.y + goal.height &&
+                player.y + player.height > goal.y) {
+                winSound.play();
                 level++;
                 if (level > levels.length) {
-                    alert('You completed all levels! 🎉');
-                    resetGame();
-                } else {
-                    // Load the next level
-                    resetGame();
+                    alert('You completed all levels!');
+                    level = 1; // Restart the game
                 }
+                resetGame();
             }
 
-            // Boundaries
-            if (player.x < 0) player.x = 0;
-            if (player.x + player.width > canvas.width) player.x = canvas.width - player.width;
+            updateTimer();
         }
 
-        // Reset the game for the next level or restart
-        function resetGame() {
+        // Reset the game after losing a life or completing a level
+        function resetGame(restart = false) {
             player.x = 50;
             player.y = 300;
             player.dy = 0;
             player.health = 100;
-            if (level > levels.length) level = 1;
+
+            if (!restart) {
+                platforms.splice(0, platforms.length, ...levels[level - 1].platforms);
+                traps.splice(0, traps.length, ...levels[level - 1].traps);
+                enemies.splice(0, enemies.length, ...levels[level - 1].enemies);
+                goal.x = levels[level - 1].goal.x;
+                goal.y = levels[level - 1].goal.y;
+            }
         }
 
-        // Draw the game state
+        // Draw everything on the canvas
         function draw() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -205,8 +264,10 @@
             platforms.forEach(platform => ctx.fillRect(platform.x, platform.y, platform.width, platform.height));
 
             // Draw traps
-            ctx.fillStyle = 'red';
-            traps.forEach(trap => ctx.fillRect(trap.x, trap.y, trap.width, trap.height));
+            traps.forEach(trap => {
+                ctx.fillStyle = trap.type === 'spike' ? 'red' : 'orange';
+                ctx.fillRect(trap.x, trap.y, trap.width, trap.height);
+            });
 
             // Draw enemies
             ctx.fillStyle = 'purple';
@@ -216,16 +277,19 @@
             ctx.fillStyle = 'gold';
             ctx.fillRect(goal.x, goal.y, goal.width, goal.height);
 
-            // Draw player
-            ctx.fillStyle = 'blue';
+            // Draw player (with simple animation)
+            ctx.fillStyle = player.direction === 'right' ? 'blue' : 'cyan';
             ctx.fillRect(player.x, player.y, player.width, player.height);
 
-            // Draw score and health
-            ctx.fillStyle = 'black';
-            ctx.font = '16px Arial';
-            ctx.fillText('Score: ' + score, 10, 20);
-            ctx.fillText('Health: ' + player.health, 10, 40);
-            ctx.fillText('Level: ' + level, canvas.width - 100, 20);
+            // Draw UI (score, health, level, lives)
+            updateUI();
+        }
+
+        function updateUI() {
+            document.getElementById('score').textContent = score;
+            document.getElementById('health').textContent = player.health;
+            document.getElementById('level').textContent = level;
+            document.getElementById('lives').textContent = lives;
         }
 
         function gameLoop() {
